--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,13 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Document
+        link(rel="stylesheet", href="styling.css")
+        
     body
 
+    h1 Welcome to the Open Community Space For Posting Messages.
+    p Feel free to post anything you want here.
     
+    script(src="scripts.js")
+    
+       
