passing data to pug

--- a/public/styling.css
+++ b/public/styling.css
@@ -1,4 +1,1 @@
-* {
-  font-family: 'Courier New', Courier, monospace;
-}
-/*# sourceMappingURL=styling.css.map */
+/* No CSS *//*# sourceMappingURL=styling.css.map */
