--- a/views/index.pug
+++ b/views/index.pug
@@ -5,12 +5,15 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Document
         link(rel="stylesheet", href="styling.css")
-        
+        link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous")
     body
 
     h1 Welcome to the Open Community Space For Posting Messages.
     p Feel free to post anything you want here.
     
+    if data
+        h1 #{data}
+
     script(src="scripts.js")
     
        
