--- a/views/note.pug
+++ b/views/note.pug
@@ -8,4 +8,5 @@ html(lang="en")
         link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous")
     body
 
-    h1 #{note_data}
+    h1 #{note_title}
+    p #{note_content}
