--- a/views/note.pug
+++ b/views/note.pug
@@ -7,6 +7,10 @@ html(lang="en")
         link(rel="stylesheet", href="styling.css")
         link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous")
     body
-
+    
     h1 #{note_title}
     p #{note_content}
+    tags #{note_tag}
+
+    a(href="/notes/noteform" class="btn btn-dark") Make another note.
+    a(href="/notes" class="btn btn-dark") Main page
