--- a/views/newnote.pug
+++ b/views/newnote.pug
@@ -6,14 +6,22 @@ html(lang="en")
         title Document
         link(rel="stylesheet", href="styling.css")
         link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous")
-    body
+
+    body(class="container")
 
     h1 Make a new note.
-    form(method="POST" action="/notes/noteform/newnote" )
-        input( type="text"  name="title" placeholder="title")
-        input( type="text"  name="content"  placeholder="content")
-        input(type="text" name="tag" placeholder="tag")
-        input(type="submit")
+    form(method="POST" action="/notes/noteform/newnote"  class="form")
+        div(class="form-group")
+            label(for="title") Title
+            input( class="form-control" type="text"  name="title" placeholder="title")
+        div(class="form-group")
+            label(for="content") Content
+            input( class="form-control" type="text"  name="content"  placeholder="content")
+        div(class="form-group")   
+            label(for="tag") Tag
+            input( class="form-control" type="text" name="tag" placeholder="tag")
+        div(class="form-group")  
+            input( class="btn btn-primary float-right" type="submit")
 
     
        
