--- a/views/newnote.pug
+++ b/views/newnote.pug
@@ -15,8 +15,8 @@ html(lang="en")
             label(for="title") Title
             input( class="form-control" type="text"  name="title" placeholder="title")
         div(class="form-group")
-            label(for="content") Content
-            input( class="form-control" type="text"  name="content"  placeholder="content")
+            label(for="content" rows="5") Content
+            textarea( class="form-control" type="text"  name="content"  placeholder="content")
         div(class="form-group")   
             label(for="tag") Tag
             input( class="form-control" type="text" name="tag" placeholder="tag")
