images to posts

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,31 +8,32 @@ html(lang="en")
         link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous")
     body(class="container")
 
-    h1(class="display-4") Open Community Space
-    p(class="text-muted") Feel free to post anything you want here.
+        h1(class="display-4") Open Community Space
+        p(class="text-muted") Feel free to post anything you want here.
 
-    if data 
-        - var values = data
-    else
-        h1 No data has been found!
+        if data 
+            - var values = data
+        else
+            h1 No data has been found!
 
-    ul
-        each val in values
-            br
-            li(class="card") 
-                div(class="card-header") 
-                    span(class="badge badge-dark") #{val.tag}
-                div(class="card-body")  
-                    h2(class="card-title") #{val.title}
-                    p(class="card-text") #{val.content}
-                    small #{val.date_published}
-                    br
-                    a(href="/notes/note/"+ val._id) more
-            
-
-    a(href="/notes/noteform" class="btn btn-dark float-right") Make a note.
+        ul
+            each val in values
+                br
+                li(class="card", style="width:50vw;") 
+                    div(class="card-header") 
+                        span(class="badge badge-dark") #{val.tag}
+                    img(class="card-img-top" src=val.image_url alt="Failed to load")
+                    div(class="card-body")  
+                        h2(class="card-title") #{val.title}
+                        p(class="card-text") #{val.content}
+                        small #{val.date_published}
+                        br
+                        a( class=" float-right btn btn-sm btn-outline-dark", href="/notes/note/"+ val._id) more
+                
+        br
+        a(href="/notes/noteform" class="btn btn-dark float-left") Make a note.
     
 
-    script(src="scripts.js")
+        script(src="scripts.js")
     
        
