--- a/views/newnote.pug
+++ b/views/newnote.pug
@@ -15,6 +15,9 @@ html(lang="en")
             label(for="title") Title
             input( class="form-control" type="text"  name="title" placeholder="title")
         div(class="form-group")
+            label(for="img_url") Image URL
+            input( class="form-control" type="text"  name="img_url" placeholder="Base url to an image")
+        div(class="form-group")
             label(for="content" rows="5") Content
             textarea( class="form-control" type="text"  name="content"  placeholder="content")
         div(class="form-group")   
