--- a/views/single-note-view.pug
+++ b/views/single-note-view.pug
@@ -30,3 +30,20 @@ html(lang="en")
                 textarea( class="form-control" type="text"  name="comment"  placeholder="Comment here")
             div(class="form-group")  
                 input( class="btn btn-light float-right" type="submit")
+        
+        br
+        br
+
+        div(class="comments")
+
+        //- if comments
+        //-     each text in comments
+        //-         br
+        //-         p #{text.content}
+        each comment in comments
+              br
+              div(class="card")
+                div(class="card-body")
+                    div(class="card-text")
+                        p #{comment.content}
+                        small #{comment.date_published}
